# nutrigene-ai

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  pyproject.toml
.claude/: WORKFLOW_QUICK_REF.md  settings.json
.claude/agents/: domain-reviewer.md  r-reviewer.md  verifier.md
.claude/hooks/: protect-files.sh
.claude/rules/: data-privacy.md  health-domain-knowledge.md  plan-first-workflow.md  python-conventions.md  quality-gates.md  r-code-conventions.md  verification-protocol.md
.claude/skills/data-analysis/: SKILL.md
.claude/skills/lit-review/: SKILL.md
.claude/skills/research-ideation/: SKILL.md
.claude/skills/review-paper/: SKILL.md
.claude/skills/review-r/: SKILL.md
configs/: chinese_dri.yaml
configs/gene_nutrient_kb/: allele_frequencies.yaml  effect_sizes.yaml  genes.yaml  recommendations.yaml  variants.yaml
docs/: genetic-risk-module.md  index.html  workflow-guide.html
guide/: workflow-guide.html  workflow-guide.qmd
quality_reports/: lit_review_personalized_nutrition_genomics_chinese.md  research_ideation_personalized_nutrition_genomics_socioeconomic.md
quality_reports/plans/: 2026-02-15_customize-repo-nutrigene-ai.md  2026-02-16_genetic-risk-module.md
scripts/: log-reminder.py  quality_score.py
src/: __init__.py
src/models/: __init__.py
src/models/genetic_risk/: __init__.py  data_models.py  knowledge_base.py  recommendation.py  risk_scoring.py  validators.py
src/utils/: __init__.py  config_loader.py  exceptions.py
tests/: __init__.py  conftest.py
tests/models/genetic_risk/: __init__.py  (+4 more)
tests/utils/: test_config_loader.py
(+1 files in other folders)
